[gd_scene load_steps=7 format=3 uid="uid://d35kythlq84t1"]

[ext_resource type="Texture2D" uid="uid://ciqmrkxpojdn4" path="res://assets/icons/delete_small.svg" id="1_dwn2q"]
[ext_resource type="Script" path="res://scripts/session_card.gd" id="1_iahk2"]
[ext_resource type="Texture2D" uid="uid://dnjgqvda0meok" path="res://assets/icons/players_small.svg" id="2_qoyw1"]
[ext_resource type="Texture2D" uid="uid://cj1sy2rqm7ik5" path="res://assets/icons/open.svg" id="4_4moom"]
[ext_resource type="Texture2D" uid="uid://1rb8b2qgcr1t" path="res://assets/icons/up_small.svg" id="4_vkgr3"]
[ext_resource type="Texture2D" uid="uid://b06jolkd8pju8" path="res://assets/icons/down_small.svg" id="5_713ma"]

[node name="SessionCard" type="Panel"]
custom_minimum_size = Vector2(0, 48)
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
script = ExtResource("1_iahk2")

[node name="SessionOptions" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="SessionOptions"]
custom_minimum_size = Vector2(4, 0)
layout_mode = 2

[node name="NameLabel" type="Label" parent="SessionOptions"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Session"
vertical_alignment = 1

[node name="DateLabel" type="Label" parent="SessionOptions"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "1/7/2023"
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="SessionOptions"]
visible = false
layout_mode = 2
texture = ExtResource("2_qoyw1")
stretch_mode = 3

[node name="PlayerCountLabel" type="Label" parent="SessionOptions"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "10"
vertical_alignment = 1

[node name="DeleteButton" type="Button" parent="SessionOptions"]
layout_mode = 2
tooltip_text = "Move to Trash"
icon = ExtResource("1_dwn2q")

[node name="MoveUpButton" type="Button" parent="SessionOptions"]
layout_mode = 2
tooltip_text = "Move Up
Moves the session up the Tally Stack"
icon = ExtResource("4_vkgr3")

[node name="MoveDownButton" type="Button" parent="SessionOptions"]
layout_mode = 2
tooltip_text = "Move Down
Moves the session down the Tally Stack"
icon = ExtResource("5_713ma")

[node name="OpenButton" type="Button" parent="SessionOptions"]
custom_minimum_size = Vector2(96, 0)
layout_mode = 2
tooltip_text = "Open Session"
text = "Open"
icon = ExtResource("4_4moom")
